--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "lint-fix": "eslint --ext .js,.ts ./src --fix",
+    "firebase": "firebase",
+    "local-dev": "firebase emulators:start --only firestore,auth,functions --import test-data",
+    "empty-emulator": "firebase emulators:start",
+    "emulator": "firebase emulators:start --import test-data",
+    "export": "firebase emulators:export test-data"
   },
   "private": true,
   "dependencies": {
@@ -30,10 +37,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
+    "@angular-eslint/builder": "^13.1.0",
+    "@angular-eslint/eslint-plugin": "^13.1.0",
+    "@angular-eslint/eslint-plugin-template": "^13.1.0",
+    "@angular-eslint/schematics": "^13.1.0",
+    "@angular-eslint/template-parser": "^13.1.0",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "^13.2.6",
+    "@types/eslint": "^8.4.1",
+    "@types/eslint-scope": "^3.7.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "angular-cli-ghpages": "^1.0.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-ngrx": "^2.0.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
