--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.5",
-    "@angular-eslint/builder": "^13.1.0",
-    "@angular-eslint/eslint-plugin": "^13.1.0",
-    "@angular-eslint/eslint-plugin-template": "^13.1.0",
-    "@angular-eslint/schematics": "^13.1.0",
-    "@angular-eslint/template-parser": "^13.1.0",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
     "@angular/language-service": "^13.2.6",
@@ -50,10 +50,10 @@
     "@types/eslint-scope": "^3.7.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "angular-cli-ghpages": "^1.0.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.2.0",
     "eslint-plugin-ngrx": "^2.0.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
