added user as an admin using helper script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "*.ts"
       ],
       "parserOptions": {
+        "ecmaVersion": "latest",
         "project": [
           "tsconfig.json"
         ],
